Migration CODE FIRST update-database

--- a/CL.WebApi/appsettings.json
+++ b/CL.WebApi/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    //foi criado um banco de dados e copiada a string de conexão da "propriedades" do banco de dados
+    "ClConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BD_Consultorio_Legal;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "AllowedHosts": "*"
 }
