Regra de Negócio e Injeção de Dependência

--- a/CL.Data/CL.Data.csproj
+++ b/CL.Data/CL.Data.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CL.Core\CL.Core.csproj" />
+    <ProjectReference Include="..\CL.Manager\CL.Manager.csproj" />
   </ItemGroup>
 
 </Project>
