--- a/CL.Manager/CL.Manager.csproj
+++ b/CL.Manager/CL.Manager.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CL.Core\CL.Core.csproj" />
   </ItemGroup>
 
